# IATB-02Apr26

./: .dockerignore  .env.example  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  5A_1_VALIDATION_RUNBOOK.ps1  AGENTS.md  AUDIT_REPORT.md  Agent1.md  COVERAGE_FIX_SUMMARY.md  COVERAGE_IMPROVEMENT_SUMMARY.md  DEPLOYMENT.md  Dockerfile  G10_VIOLATION_FIX_SUMMARY.md  G7_Floats_Found.csv  GIT_SYNC_GUIDE.md  IATB Auto-Selection Integration_ Multi-Factor Scoring Research & Analysis.md  IATB.code-workspace  IATB_COMPREHENSIVE_ANALYSIS_REPORT.md  LICENSE  MYPY_FIXES_REPORT.md  MYPY_FIXES_VALIDATION.ps1  OPTIMIZATION_10_DOCUMENTATION_RUNBOOK.ps1  OPTIMIZATION_4_1_CI_PIPELINE_SUMMARY.md  OPTIMIZATION_8_CONFIG_CENTRALIZATION_RUNBOOK.ps1  OPTIMIZATION_9_OBSERVABILITY_STACK.md  OPTIMIZATION_9_OBSERVABILITY_STACK_RUNBOOK.ps1  OPTIMIZATION_9_OBSERVABILITY_STACK_SUMMARY.md  PHASE_J_VALIDATION_RUNBOOK.ps1  POINT_4_1_EXECUTION_GUIDE.md  POINT_4_2_EXECUTION_GUIDE.md  POINT_4_2_ORDER_MANAGER_COVERAGE_RUNBOOK.ps1  POINT_4_5_EXECUTION_GUIDE.md  PRODUCTION_READINESS_CERTIFICATION_N3.md  PRODUCTION_READINESS_CERTIFICATION_N3_3.md  PRODUCTION_READINESS_CERTIFICATION_N4.md  QUALITY_GATES_VALIDATION_REPORT.md  README.md  RISK_2_TOKEN_EXPIRY_MITIGATION_RUNBOOK.ps1  RISK_3_RATE_LIMITING_MITIGATION_COMPLETE_RUNBOOK.ps1  (+134 more)
.github/prompts/: iatb.prompt.md
.github/workflows/: ci.yml  security.yml
.kilo/: agent-manager.json
config/: .env.example  exchanges.toml  logging.toml  nse_holidays.toml  prometheus.yml  settings.toml  strategies.toml  watchlist.toml  weights.toml
data/audit/: test_trades.sqlite  trades.sqlite
docs/: API_REFERENCE.md  ARCHITECTURE.md  ARCHITECTURE_REVIEW_VALIDATION_PLAN.md  COVERAGE_0_PERCENT_TEST_PROPOSAL.md  COVERAGE_ROADMAP.md  DECISION_001_TOKEN_MANAGEMENT_CONSOLIDATION.md  PRODUCTION_DEPLOYMENT_READINESS.md  SPRINT_1_COMPLETION_REPORT.md  SPRINT_2_DATA_PROVIDER_TESTING_PLAN.md  STRATEGY_DEVELOPMENT_GUIDE.md
scripts/: DEVELOPMENT_WORKFLOW.md  L2_strategy_runner_validation.ps1  SPRINT2_VERIFICATION_GUIDE.md  VERIFICATION_GUIDE.md  backup_restore.ps1  check_g10_func_size.py  check_g7_no_float.py  check_g8_no_naive_datetime.py  check_g9_no_print.py  check_print_statements.py  complete_coverage.ps1  dashboard.py  dashboard_enhanced.html  dashboard_sse.html  dashboard_sse.py  deploy_cloud.ps1  deploy_p0_fixes.ps1  deploy_paper_trade.py  deploy_risk_reward_fix.ps1  docker-healthcheck.py  engine_launcher.ps1  git_sync.ps1  git_sync.py  git_sync_risk_reward.ps1  live_executor_validation.ps1  monitor_zerodha_connection.py  pre_market_token_validator.py  quality_gate.bak.g7fix.20260407_133646.ps1  quality_gate.ps1  quality_gates_powershell.ps1  quick_validation.ps1  risk_report_generation_runbook.ps1  run_gate.py  run_quality_gates.py  run_test_fixes.ps1  schedule_pre_market_validator.ps1  secret_scan_fallback.py  setup.ps1  start_all.ps1  start_dashboard.ps1  (+28 more)
src/iatb/: __init__.py  api.py  deployment_dashboard.py  fastapi_app.py
tests/: __init__.py  conftest.py  conftest_optimized.py  p0_critical_fixes_test.py  test_api.py  test_deployment_dashboard.py  test_fastapi_app.py  test_init.py  test_remediation_certification.py  test_sse_broadcaster.py  test_watchlist_api.py
tests/backtesting/: test_event_driven.py  test_forward_test.py  test_indian_costs.py  test_monte_carlo.py  test_report.py  test_session_masks.py  test_session_masks.py.bak  test_session_masks.py.bak3  test_vectorbt_engine.py  test_vectorized.py  test_walk_forward.py
tests/broker/: __init__.py  test_base.py  test_broker_interface.py  test_token_manager.py  test_token_manager.py.bak  test_token_manager_coverage.py  test_zerodha_broker.py
tests/core/: __init__.py  conftest.py  test_clock.py  test_clock_drift_detection.py  test_config.py  test_config_manager.py  test_engine.py  test_engine_pipeline.py  test_enums.py  test_event_bus.py  test_event_bus_refactored.py  test_event_persistence.py  test_event_persistence_coverage.py  test_event_validation.py  test_event_validation_coverage.py  test_events.py  test_exceptions.py  test_exchange_calendar.py  test_health.py  test_multi_channel_alerting.py  test_observability_alerting.py  test_observability_enhanced.py  test_observability_logging.py  test_observability_metrics.py  test_observability_tracing.py  test_paper_runtime.py  test_pipeline_health.py  test_preflight.py  test_property_invariants.py  test_queue.py  test_queue_coverage.py  test_queue_redis.py  test_runtime.py  test_scaling.py  test_secrets_rotation.py  test_sse_broadcaster.py  test_sse_broadcaster_coverage.py  test_strategy_runner.py  test_types.py
tests/data/: __init__.py  conftest.py  test_base.py  test_ccxt_provider.py  test_data_source_validation.py  test_error_recovery.py  test_failover_provider.py  test_financial_invariants.py  test_instrument.py  test_instrument_master.py  test_instrument_master_cache.py  test_jugaad_provider.py  test_kite_provider.py  test_kite_provider_coverage.py  test_kite_ticker.py  test_kite_ws_provider.py  test_market_data_cache.py  test_migration_provider.py  test_normalizer.py  test_normalizer_coverage.py  test_openalgo_provider.py  test_openalgo_provider_coverage.py  test_price_reconciler.py  test_properties_critical.py  test_provider_factory.py  test_rate_limiter.py  test_token_resolver.py  test_token_resolver_coverage.py  test_validator.py  test_validator_coverage.py  test_websocket_reconnection.py  test_yfinance_provider.py
tests/execution/: test_base.py  test_ccxt_executor.py  test_crash_recovery.py  test_instrument_resolver.py  test_live_executor.py  test_live_gate.py  test_openalgo_executor.py  test_order_duplicate_detection.py  test_order_manager.py  test_order_manager_coverage.py  test_order_manager_pnl.py  test_order_throttle.py  test_paper_executor.py  test_paper_executor_validation.py  test_pre_trade_validator.py  test_price_reconciliation_integration.py  test_strike_selector.py  test_token_helpers.py  test_trade_audit.py  test_transaction_costs.py  test_zerodha_connection.py  test_zerodha_token_manager.py  (+1 more)
warp/: iatb.global.rule.txt  iatb.warp.prompt.txt
(+369 files in other folders)
