[tool.poetry]
name = "iatb"
version = "0.1.0"
description = "Interactive Algorithmic Trading Bot"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{ include = "iatb", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.12,<3.14"
pydantic = "^2.0.0"
pydantic-settings = "^2.0.0"
yfinance = "^0.2.65"
jugaad-data = "^0.33.1"
ccxt = "^4.5.17"
openalgo = "^1.0.0"
duckdb = "^1.4.0"
sqlalchemy = "^2.0.40"
pyarrow = "^18.1.0"
pandas = "^2.2.3"
pandas-ta-classic = "^0.4.47"
hmmlearn = "^0.3.3"
transformers = "^4.57.3"
aion-sentiment = "*"
vadersentiment = "^3.3.2"
newspaper3k = "^0.2.8"
quantstats = "^0.0.62"
optuna = "^4.5.0"
stable-baselines3 = "^2.7.0"
gymnasium = "^1.2.1"
tensorboard = "^2.20.0"
torch = "^2.8.0"
torch-geometric = "^2.7.0"
mlflow = "^3.3.2"
streamlit = "^1.48.1"
plotly = "^6.3.0"
python-telegram-bot = "^22.4"
tomli = "^2.0.0"
tomli-w = "^1.0.0"
pyotp = "^2.9.0"
keyring = "^25.0.0"
opentelemetry-api = "^1.28.0"
opentelemetry-sdk = "^1.28.0"
opentelemetry-instrumentation-fastapi = "^0.49b0"
opentelemetry-instrumentation-logging = "^0.49b0"
opentelemetry-exporter-otlp = "^1.28.0"
opentelemetry-exporter-prometheus = "^0.49b0"
prometheus-client = "^0.21.0"
prometheus-fastapi-instrumentator = "^7.0.0"
python-json-logger = "^3.2.1"

[tool.poetry.group.dev.dependencies]
ruff = "^0.1.0"
mypy = "^1.0.0"
bandit = "^1.7.0"
pytest = "^8.0.0"
pytest-asyncio = "^0.23.0"
pytest-cov = "^4.0.0"
pytest-xdist = "^3.6.0"
hypothesis = "^6.0.0"
pre-commit = "^3.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "S", "B", "A", "C4", "DTZ", "T20", "ICN"]
ignore = []

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "S105", "S106"]  # Allow assert, test values in tests
"src/iatb/data/base.py" = ["A003"]  # Preserve canonical OHLC field names (open/high/low/close)
"src/iatb/storage/git_sync.py" = ["S603"]  # subprocess used with explicit argv and shell disabled
"src/iatb/execution/order_manager.py" = ["S101"]  # Type guard assertions for daily_loss_guard
"tests/conftest_optimized.py" = ["DTZ001"]  # Mock datetime fixture ensures UTC timezone
"tests/risk/test_sebi_compliance_coverage.py" = ["DTZ001"]  # Naive datetime test
"tests/risk/test_risk_report.py" = ["DTZ005"]  # Intentional naive datetime for validation test
"src/iatb/data/rate_limiter.py" = ["S311"]  # Random used for jitter, not cryptographic
"src/iatb/market_strength/strength_scorer.py" = ["B019"]  # Intentional caching with size limits for performance
"scripts/verify_sprint2_*.py" = ["T201", "DTZ005", "S602", "E501"]  # Utility scripts for manual verification
"src/iatb/storage/audit_exporter.py" = ["A002", "A003", "S112"]  # 'format' shadows builtin; try-except-continue for individual file deletion failures
"tests/storage/test_audit_exporter.py" = ["DTZ001", "B017", "E501"]  # Naive datetime, generic Exception, long test assertions
"tests/storage/test_audit_scheduler.py" = ["F841"]  # Unused variable in test

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_configs = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = "iatb.data.kite_provider"
warn_unreachable = false

[[tool.mypy.overrides]]
module = "iatb.market_strength.strength_scorer"
disable_error_code = ["assignment"]

[[tool.mypy.overrides]]
module = "iatb.data.rate_limiter"
disable_error_code = ["no-any-return"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--cov=src",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-fail-under=90",
    "--strict-markers",
    "-v"
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "asyncio: marks tests as async"
]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["src"]
branch = true
parallel = false
concurrency = ["thread", "multiprocessing"]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
fail_under = 90

  [tool.bandit]
  exclude_dirs = ["tests"]
  skips = ["B101", "B112"]  # Skip assert_used and try_except_pass warnings
