[tool.poetry]
name = "iatb"
version = "0.1.0"
description = "IATB: Indian Algorithmic Trading Base"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pydantic = {extras = ["dotenv"], version = "^2.7.1"}
pydantic-settings = "^2.3.3"
pandas = "^2.2.0"
aiohttp = "^3.9.4"
python-dotenv = "^1.0.1"
requests = "^2.31.0"
streamlit = "^1.28.0"
plotly = "^5.18.0"
ktz = "^0.1.0"
rich = "^13.7.1"
structlog = "^24.1.0"
python-json-logger = "^2.0.7"
ta = "^0.11.0"
pyyaml = "^6.0.1"
redis = {extras = ["hiredis"], version = "^5.0.1"}
scipy = "^1.12.0"
numpy = "^1.26.4"
duckdb = "^0.10.0"
httpx = "^0.28.1"
keyring = "^25.0.0"
opentelemetry-api = "^1.41.1"
prometheus-client = "^0.25.0"
prometheus-fastapi-instrumentator = "^7.1.0"
opentelemetry-exporter-otlp-proto-grpc = "^1.41.1"
fastapi = "^0.136.1"
optuna = "^4.8.0"

[tool.poetry.group.dev.dependencies]
mypy = "^1.9.0"
ruff = "^0.3.0"
pre-commit = "^3.5.0"
pytest = "^8.1.1"
pytest-cov = "^4.1.0"
pytest-asyncio = "^0.23.5"
pytest-xdist = {extras = ["psutil"], version = "^3.5.0"}
pytest-mock = "^3.12.0"
freezegun = "^1.4.0"


bandit = {extras = ["toml"], version = "^1.7.8"}
poethepoet = "^0.23.0"

types-pyyaml = "^6.0.12.20240311"
types-python-dateutil = "^2.8.19.20240311"
types-requests = "^2.31.0.20240406"
types-redis = "^4.6.0.20240403"
types-aiofiles = "^23.2.0.20240311"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


## Coverage

[tool.coverage.run]
source = ["src"]
branch = true
parallel = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__:",
    "if TYPE_CHECKING:",
]


## Pytest

[tool.pytest.ini_options]
addopts = "-n auto --dist loadscope"
asyncio_mode = "auto"
pythonpath = ["src", "tests"]
markers = [
    "slow: marks tests as slow",
    "integration: marks integration tests",
]


  ## Ruff

  [tool.ruff]
  line-length = 88

  [tool.ruff.lint]
  select = [
    "E4",
    "E7",
    "E9",
    "F",
    "B",
    "Q",
    "I",
    "ARG",
    "C4",
    "ICN",
    "ISC",
    "PIE",
    "T20",
    "PT",
    "RSE",
    "RET",
    "SIM",
  ]
  ignore = ["B008", "B905", "B019", "B017", "F403", "F821", "ISC001", "ARG001", "ARG002", "ARG005", "SIM102", "SIM105", "SIM117", "SIM101", "SIM114", "SIM300", "SIM221", "RET503", "RET504", "RET505", "PIE790", "PIE810", "PT001", "PT004", "PT006", "PT011", "PT012", "PT017", "PT018", "PT019", "PT023", "T20"]
  fixable = ["ALL"]
  unfixable = []
  dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

  [tool.ruff.format]
  quote-style = "double"
  indent-style = "space"
  skip-magic-trailing-comma = false
  line-ending = "auto"


## MyPy

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
show_traceback = true
show_column_numbers = true
no_implicit_optional = true
ignore_missing_imports = true
follow_imports = "normal"


## Bandit

[tool.bandit]
targets = ["src"]
skips = ["B101"]